# knobs

./: .gitignore  Makefile  README.md  pyproject.toml
imgs/: knob-base.xcf  knob-ridged-245.xcf
src/knobs/: __init__.py  knobs.py
tests/knobs/: test_knobs.py
